# aixbdd

./: .gitignore  LICENSE  README.md
.agents/skills/aibdd-api-plan/: SKILL.md
.agents/skills/aibdd-data-plan/: SKILL.md
.agents/skills/aibdd-dependency-plan/: SKILL.md
.agents/skills/aibdd-dsl-refine/: SKILL.md
.agents/skills/aibdd-dsl-to-isa-interpretation/: SKILL.md
.agents/skills/aibdd-flows-specify/: SKILL.md
.agents/skills/aibdd-form-activity/: SKILL.md
.agents/skills/aibdd-form-ddl-spec/: SKILL.md
.agents/skills/aibdd-function-packaging/: SKILL.md
.agents/skills/aibdd-green-execute/: SKILL.md
.agents/skills/aibdd-isa-init/: SKILL.md
.agents/skills/aibdd-kickoff/: SKILL.md
.agents/skills/aibdd-principle-starter-stableness/: SKILL.md
.agents/skills/aibdd-red-execute/: SKILL.md
.agents/skills/aibdd-rules-specify/: SKILL.md
.agents/skills/aibdd-spec-by-example-analyze/: SKILL.md
.agents/skills/aibdd-table-to-entity/: SKILL.md
.agents/skills/hierarchical-skill-creator/: SKILL.md
.claude/skills/aibdd-core/lib/activity-parser/: README.md  pyproject.toml
.claude/skills/aibdd-core/lib/activity-parser/src/activity_parser/: __init__.py  cli.py  gherkin_skeleton.py  parser.py  path.py
.claude/skills/aibdd-core/lib/promote-dsl/: README.md  pyproject.toml
.claude/skills/aibdd-core/lib/promote-dsl/src/promote_dsl/: __init__.py  applier.py  cli.py  proposal.py  scanner.py
specs/: boundary-map.yml
specs/architecture/: boundary.yml  component-diagram.class.mmd
specs/contracts/: common.yml  game.api.yml  game.dsl.yml
specs/data/: domain.dbml  domain.dsl.yml
specs/shared/: dsl.yml
(+748 files in other folders)
