[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promote-dsl"
version = "0.1.0"
description = "DSL Two-Tier promotion executor for spec-kit-aibdd (scan / propose / apply)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Johnny Pan" }]
dependencies = [
  "click>=8.1",
  "pyyaml>=6.0",
]

[project.scripts]
promote-dsl = "promote_dsl.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/promote_dsl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
